fixed header css and ts broken on mobile

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -34,14 +34,6 @@
         justify-content: flex-end;
         align-items: center;
         height: 45px;
-        cursor: pointer;
-        transition: transform 0.3s ease;
-        position: relative;
-        z-index: 1001;
-      
-        &:active {
-          transform: scale(0.95);
-        }
       
         i {
           font-size: 1.6rem;
